# htmx-password-manager

./: .gitignore  Dockerfile  package-lock.json  pyproject.toml
creditcards/: apps.py  forms.py  models.py  urls.py  views.py
creditcards/migrations/: 0001_initial.py  0002_remove_creditcard_expiration_date_and_more.py
creditcards/templates/creditcards/: cc_detail.html  creditcard_list.html
creditcards/templatetags/: cc_filters.py
manager/: forms.py  models.py  urls.py  views.py
manager/migrations/: 0001_initial.py  0002_alter_login_password.py  0003_alter_login_login_alter_login_title_alter_login_url.py  0004_login_created_at_login_updated_at.py
manager/templates/manager/: categoris.html  item_form.html  login_detail.html  login_form.html  login_list.html  main.html  secret-buttons.html
password_manager/: log_handlers.py  settings.py  urls.py
static/CACHE/css/: output.00c06513f3b3.css  output.0317aa45cc07.css  output.0bec80e236d7.css  output.0c42853e7136.css  output.2bbb50850d25.css  output.5803bbf38fb5.css  output.5d77f86e0519.css  output.5de7e64aa248.css  output.61ef08f3c555.css  output.765a1a90629e.css  output.8a1b168d8728.css  output.8aad4ef87872.css  output.8fcb5fc52d5a.css  output.9c08aa56d0aa.css  output.a5cc30245d49.css  output.a704438e0a8c.css  output.a81e3183da0a.css  output.e2fc502b2fa7.css  output.e787af1a7de0.css  output.edbd2ae95442.css  output.f240deb770ad.css  output.f522a2b49297.css  (+1 more)
static/css/: common.css
static/js/: main.js
static/src/: input.css
templates/base/: base.html
users/: forms.py  urls.py  views.py
(+4 files in other folders)
