[tool.poetry]
name = "password-manager"
version = "0.1.0"
description = ""
authors = ["Yuriy Peskov <yuriy.peskov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.4"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar-django13 = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
